styles.css
:root {
    --color1: #265879;
    --color2: #FFF;
    --color3: #000;

    --rad-color: radial-gradient(at 50% 50%, var(--color1), var(--color3));
}
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    transition: all 0.4s 0.1s;
}
body {
    background: var(--rad-color);
    width: 100vw;
    height: 100vh;
    display: grid;
    padding: 12px;
    overflow: hidden;
    font-family: sans-serif, Helvetica;
    font-size: 110%;
}
main {
    /* background: var(--rad-color); */
    color: var(--color2);
    overflow: auto;
    padding: 10px 20px;
    box-shadow: 0 0 12px var(--color3);
}
/* pages + style */
header {
    text-shadow: 3px 3px 12px var(--color3);
    top: 0
}
header, #entry, #create-parent {
    /* background: var(--color1); */
    background: var(--rad-color);
    text-align: center;
    position: sticky;
    z-index: 1;
    margin: 0.5rem;
}
.frame-head {
    text-align: center;
    font-style: italic;
    margin-bottom: 0.75rem;
    font-size: 125%;
    color: var(--color1);
    text-shadow: 0 0 6px var(--color2);
}
#entry {
    bottom: 24px;
    padding: 8px 16px;
    max-width: max-content;
    margin-inline: auto;
}
#entry, #create-parent {
    box-shadow: inset 0 0 12px var(--color3);
    border: 4px solid var(--color3);
    height: 42px;
    overflow: hidden;
}
#entry:hover, #create-parent:hover {
    height: max-content;
}
#entry *, #create-parent * {
    margin-bottom: 0.5rem;
}
#entry input {
    margin-right: 0.75rem;
}
#entry label {
    display: inline-block;
}
#entry-add, #make-parent {
    display: block;
    margin-inline: auto;
}
#screen {
    min-height: 12px;
    padding: 6px;
    box-shadow: inset 0 0 12px var(--color3);
}
.todo {
    padding: 0.35rem;
    display: grid;
    grid-template-columns: repeat(7, 1fr);
}
.todo, .parent-node {
    text-shadow: 0 0 2px var(--color3);
    border-left: 4px solid var(--color3);
    border-bottom: 4px solid var(--color3);
    box-shadow: 0 0 12px var(--color3);
    margin: 0.5rem;
    transition: none;
}
.todo:hover, .parent-node:hover {
    border: 2px solid var(--color2);
}
.todo-step , .todo-activity, .todo-complete {
    margin: 0.125rem 0.5rem;
    padding: 0.25rem;   
}
.todo-activity {
    grid-column-start: 2;
    grid-column-end: 6;
} 
.todo-select, .parent-select{
    background: var(--color1);
    color: var(--color2);
    font-size: 100%;
    border: none;
    /* box-shadow: inset 0 0 4px var(--color3); */
    box-shadow: inset 0 0 1px var(--color3);
    border-bottom: 2px solid var(--color3);
    padding: 4px;
}
.todo-activity span {
    border-bottom: 2px solid var(--color3);
    overflow: hidden;
}
.todo-remove {
    width: max-content;
    grid-column: -1;
}
.clear {
    clear: both;
    width: 0px;
    height: 0px;
    display: none;
}
.btns {
    background: #FFF;
    color: #000;
    border: 3px inset var(--color3);
}
button {
    margin: 0.125rem 0.5rem;
    padding: 0.125rem 0.25rem;
    border-radius: 0;
    box-shadow: 0 0 12px var(--color3);
    height: max-content;
}
button:hover {
    scale: 1.15;
}
.rm-btns {
    margin-top: 0.15rem;
}
.rm-block {
    display: block;
}
#return-home {
    margin-top: 0.65rem;
}
#theme-color {
    background: var(--color2);
    position:absolute;
    top: 0;
    right: 0;
    width: 18px;
    height: 18px;
    border-radius: 50%;
    border-top: 2px inset var(--color2);
}
#theme-color:hover {
    scale: 1.5;
}

/* mostly parent styles */
.parent-node {
    padding: 0.75rem;
    text-align: center;
    position: relative;
}
#create-parent {
    bottom: 24px;
    padding: 8px 40px;
    max-width: max-content;
    margin-inline: auto;
}
.parent-delete, .parent-no {
    position: absolute;
    top: 8px;
}
.parent-delete {
    right: 0;
}
.parent-no {
    left: 0;
    margin: 0 0.5rem ;
}
.parent-link {
    width: 60%;
    max-height: 55px;
    overflow: hidden;
    margin: auto;
    display: block;
    color: inherit;
    padding: 0.75rem;
    animation: blink 1.5s 0.5s ease-in-out  infinite;
}
.parent-link:hover {
    color: var(--color1);
    background: var(--color3);
}
@keyframes blink {
    50% {
        text-shadow: 0 0 18px var(--color2);
    }
}

/* Media */
@media screen and (min-width: 1400px) {
    body {
        max-width: 1400px;
        margin: auto;
    }
}
@media screen and (max-width: 480px) {
    body {
        padding: 4px;
        /* height: 95vh; */
    }
    main {
        padding: 0px;
        padding-bottom: 5rem;
    }
    #entry label {
        display: block;
    }
    button {
        scale: 1.15;
    }
    .todo {
        display: block;
    }
    .todo-select, .parent-select {
        padding: 1px 4px;
    }
    .todo-complete {
        float: left;
    }
    .todo-remove {
        float: right;
    }
    .clear {
        display: flex;
    }
}

